# rules_robotpy_utils

./: .styleguide  BUILD.bazel  MODULE.bazel  WORKSPACE  download_dependencies.bzl  requirements.txt  requirements_darwin.txt  requirements_lock.txt  requirements_windows.txt  setup_dependencies.bzl
.github/workflows/: build.yml  repin.yml
robotbuild_generation/: BUILD.bazel  load_project_config.py  pybind_gen_utils.py  pybind_on_build_dl.py  pybind_on_build_dl_shim.py  pybind_on_build_gen.py
rules_robotpy_utils/: generate_robopy_files.bzl  generate_robotpy_project_files.bzl  generate_robotpy_source_files.bzl  pybind_rules.bzl  pybind_subproject_rules.bzl
rules_robotpy_utils/private/: generate_project_files.bzl  generate_source_files.bzl
rules_robotpy_utils/robotbuild_generation/: BUILD.bazel  load_project_config.py  pybind_gen_utils.py  pybind_on_build_dl.py  pybind_on_build_dl_shim.py  pybind_on_build_gen.py  pybind_on_build_gen_shim.py
test/: .bazelrc  MODULE.bazel  WORKSPACE
test/cpp/: BUILD.bazel  example.cc  example.cpp  example.hh  example.hpp
test/python/: BUILD.bazel  pyproject.toml
test/python/example/: BUILD.bazel  _init_example.py  pkgcfg.py
