module(
    name = "rules_robotpy_utils",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.21.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "aspect_bazel_lib", version = "1.39.0")
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")

pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "rules_robotpy_utils_pip_deps",
    requirements_darwin = "//:requirements_darwin.txt",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "rules_robotpy_utils_pip_deps")

python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
python_configure.toolchain(python_version = "3")
use_repo(python_configure, "local_config_python", "pybind11")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_10",
    ignore_root_user_error = True,
    python_version = "3.10",
)
use_repo(python, "python3_10_toolchains")

register_toolchains(
    "@python3_10_toolchains//:all",
)
