bazel_dep(name = "rules_robotpy_utils", version = "")
local_path_override(
    module_name = "rules_robotpy_utils",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_java", version = "6.4.0")
bazel_dep(name = "rules_python", version = "0.21.0")
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")

python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
python_configure.toolchain(python_version = "3")
use_repo(python_configure, "local_config_python", "pybind11")
