load("@rules_robotpy_utils//rules_robotpy_utils:generate_robopy_files.bzl", "generate_robopy_files")
load("@rules_robotpy_utils//rules_robotpy_utils:pybind_rules.bzl", "generated_files_helper")

generated_files_helper(
    name = "example",
    visibility = ["//visibility:public"],
)

generate_robopy_files(
    name = "example",
    config_file = ":pyproject.toml",
    disable = True,
    headers = ["//cpp:headers"],
)
